--- a/BeforAfter/BeforAfter/Base.lproj/Main.storyboard
+++ b/BeforAfter/BeforAfter/Base.lproj/Main.storyboard
@@ -136,14 +136,55 @@
                                     <constraint firstAttribute="width" constant="250" id="WoE-6k-OrN"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ujd-jG-3oU" customClass="FLAnimatedImageView">
+                                <rect key="frame" x="240" y="354" width="120" height="120"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="5yA-F9-PmZ"/>
+                                    <constraint firstAttribute="height" constant="120" id="Rkn-37-CIS"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSf-0b-hRr">
+                                <rect key="frame" x="534" y="90" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="FhF-HX-O7o"/>
+                                    <constraint firstAttribute="height" constant="30" id="Ym7-lI-lBk"/>
+                                </constraints>
+                                <state key="normal" title="take">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTouchTakeButton:" destination="dek-OR-sMo" eventType="touchUpInside" id="Pqz-yo-J8k"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1T0-Q5-4o3">
+                                <rect key="frame" x="534" y="135" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Jb3-Ui-ipe"/>
+                                    <constraint firstAttribute="height" constant="30" id="mkT-uF-zSI"/>
+                                </constraints>
+                                <state key="normal" title="gif">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didTouchGifButton:" destination="dek-OR-sMo" eventType="touchUpInside" id="zAk-rc-qzc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1T0-Q5-4o3" firstAttribute="trailing" secondItem="Sir-Oh-znl" secondAttribute="trailingMargin" id="7Zl-wI-JPO"/>
+                            <constraint firstItem="cSf-0b-hRr" firstAttribute="top" secondItem="YQD-so-dqW" secondAttribute="bottom" constant="26" id="IAa-rf-Xl4"/>
+                            <constraint firstItem="cSf-0b-hRr" firstAttribute="trailing" secondItem="Sir-Oh-znl" secondAttribute="trailingMargin" id="Xtk-wF-6PK"/>
+                            <constraint firstAttribute="centerX" secondItem="Ujd-jG-3oU" secondAttribute="centerX" id="do5-7m-He0"/>
+                            <constraint firstItem="Ujd-jG-3oU" firstAttribute="top" secondItem="uH3-nd-ThL" secondAttribute="bottom" constant="14" id="fIa-2B-Z1V"/>
+                            <constraint firstItem="1T0-Q5-4o3" firstAttribute="top" secondItem="cSf-0b-hRr" secondAttribute="bottom" constant="15" id="hQf-qf-zOL"/>
                             <constraint firstAttribute="centerX" secondItem="uH3-nd-ThL" secondAttribute="centerX" id="irK-Xd-htL"/>
                             <constraint firstItem="uH3-nd-ThL" firstAttribute="top" secondItem="YQD-so-dqW" secondAttribute="bottom" constant="26" id="rGF-Tr-DG8"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="animatedImageView" destination="Ujd-jG-3oU" id="co4-3F-dDn"/>
                         <outlet property="previewView" destination="uH3-nd-ThL" id="LFE-Cg-s9g"/>
                     </connections>
                 </viewController>
